[package]
name = "FTL-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ftlt"
crate-type = ["cdylib"]

[dependencies]
flume = "0.11.0"
num_cpus = "1.16.0"
once_cell = "1.18.0"
smol = "1.3.0"
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros"] }
# wtransport = "0.1.4"
wtransport = { git = "https://github.com/BiagioFesta/wtransport", branch = "master" }
base64 = "0.21.4"
rcgen = "0.11.1"
ring = "0.16.20"
time = "0.3.28"
anyhow = "1.0.75"
