[package]
name = "Webtransport"
description = "Deno WebTransport FFI library for Deno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "webtransport"
crate-type = ["cdylib"]
test = false
bench = false

[profile.release]
strip = true
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 16
rpath = false

[profile.dev]
opt-level = 0
lto = false
debug = true
debug-assertions = true
overflow-checks = true
panic = "abort"
incremental = true
codegen-units = 1

[dependencies]
once_cell = "=1.18.0"
tokio = { version = "=1.32.0", default-features = false, features = [
	"rt",
	"rt-multi-thread",
	"macros",
] }
# wtransport = "0.1.4" # TODO: Replace this once the fix for arm is merged.
wtransport = { git = "https://github.com/hironichu/wtransport", branch = "feat/new", features = [
	"dangerous-configuration",
] }
wtransport-proto = { git = "https://github.com/hironichu/wtransport", branch = "feat/new" }
rcgen = "=0.11.1"
ring = "=0.16.20"
time = "=0.3.28"
anyhow = "=1.0.75"
serde = { version = "=1.0", features = ["derive"] }
